--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
             <div class="main_container">
                 <div id="header">
                     <div id="logo"></div>
-                    <div id="user_login"></div>
+                    <div id="user_login">
+                        <form method="post" action="include/login/">
+                            <input type="text" name="user_username" />משתמש:
+                            <input type="password" name="user_password" />סיסמא:
+                            <input type="submit" name="user_submit" value="התחבר" />
+                        </form>
+                    </div>
                 </div>
                 <div id="navbar">
                     <ul>
@@ -35,13 +41,6 @@
                         <li><a href="#" class="link_regular">Link 2</a></li>
                         <li><a href="#" class="link_regular">Link 3</a></li>
                         <li><a href="#" class="link_regular">Link 4</a></li>
-                        <li>
-                            <form method="post" action="include/login/">
-                                <input type="text" name="user_username" />משתמש:
-                                <input type="password" name="user_password" />סיסמא:
-                                <input type="submit" name="user_submit" value="התחבר" />
-                            </form>
-                        </li>
                     </ul>  
                 </div>
                 <div id="links">
