--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div id="body_navbar">
                     <ul id="obj_menu">
-                        <li><a href="#" class="active">בית</a></li>
+                        <li><a href="#" class="first active">בית</a></li>
                         <li><a href="#">כתבות</a></li>
                         <li><a href="#">סיקורים</a></li>
                         <li><a href="#">מגניבים</a></li>
