Some little changes

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <div id="obj_logo"></div>
                     <div id="obj_user_login">
                         <form method="post" action="include/login/">
-                            <input type="text" name="user_username" />משתמש:
-                            <input type="password" name="user_password" />סיסמא:
+                            משתמש:<input type="text" name="user_username" /><br />
+                            סיסמא:<input type="password" name="user_password" />
                             <input type="submit" name="user_submit" value="התחבר" />
                         </form>
                     </div>
@@ -40,7 +40,7 @@
                         <li><a href="#" class="first active">בית</a></li>
                         <li><a href="#">כתבות</a></li>
                         <li><a href="#">סיקורים</a></li>
-                        <li><a href="#">מגניבים</a></li>
+                        <li><a href="#">משחקים אחרונים</a></li>
                     </ul>  
                 </div>
                 <div id="body_content">
