--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
 					</div>
                 </div>
                 <div id="body_footer">
-                        
+                    <a href="#" class="link_footer">קישור תחתון</a><a href="#" class="link_footer">קישור תחתון</a>
+					<a href="#" class="link_footer">קישור תחתון</a><a href="#" class="link_footer">קישור תחתון</a>
+					<a href="#" class="link_footer">קישור תחתון</a><a href="#" class="link_footer">קישור תחתון</a>
+					<a href="#" class="link_footer">קישור תחתון</a><a href="#" class="link_footer">קישור תחתון</a><br />
                 </div>
             </div>
         </div>
