--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <title>4Gamers 2012 - Coming soon</title>
       	<meta name="description" content="">
         <meta name="keywords" content="">
@@ -34,8 +36,8 @@
                                     <td width="70%">
                                         <table cellspacing="1">
                                             <tr>
-                                                <td>משתמש:</td><td>
-                                                <input type="text" name="user_username" /></td>
+                                                <td>משתמש:</td>
+                                                <td><input type="text" name="user_username" /></td>
                                             </tr>
                                             <tr>
                                                 <td>סיסמא:</td>
