--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                                         <table cellspacing="1">
                                             <tr>
                                                 <td>משתמש:</td>
-                                                <td><input type="text" name="user_username" /></td>
+                                                <td><input type="text" name="user_username" class="input_text_medium" /></td>
                                             </tr>
                                             <tr>
                                                 <td>סיסמא:</td>
-                                                <td><input type="password" name="user_password" /></td>
+                                                <td><input type="password" name="user_password" class="input_text_medium" /></td>
                                             </tr>
                                         </table>
                                     </td>
                                     <td width="30%" align="center">
-                                        <input type="submit" name="user_submit" value="התחבר" />
+                                        <input type="submit" name="user_submit" value="התחבר" class="input_submit_large" />
                                     </td>
                                 </tr>
                             </table>
