--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div id="body_content">
 					<div class="block_raw">
-						<span class="padding_5 color_steel display_block border_bottom"><h5>ראשי >> כתבות >> כתבה ראשונה (דוגמא)</h5></span>
+						<span class="padding_5 color_steel display_block border_bottom"><h5><a href="#">ראשי</a> &#8250; <a href="#">כתבות</a> &#8250; <a href="#">כתבה ראשונה</a></h5></span>
 					</div>
                     <div class="block_raw">
 						<div class="block_column_70">
