--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
             
         <script>
             $(document).ready(display_site);
-            
-            function display_site()
-            {
-                 $('.slideshow').slideshow({ timeout: 3000, speed: "slow" });
+            function display_site(){
+				$('.slideshow').slideshow({ timeout: 3500, speed: "slow" });
             }
         </script>
     </head>
