--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </form>
                     </div>
                 </div>
-                <div id="body_navbar" class="color_blacksteel">
+                <div id="body_navbar" class="color_blue">
                     <ul id="obj_menu">
                         <li><a href="#" class="first active">בית</a></li>
                         <li><a href="#">כתבות</a></li>
