--- a/index.html
+++ b/index.html
@@ -134,10 +134,11 @@
 							<ul>
 								<li>
 									<span>
-										
+										<img src="" />
 									</span>
 									<span>
-										
+										<h5></h5>
+										<p></p>
 									</span>
 								</li>
 							</ul>
