--- a/index.html
+++ b/index.html
@@ -131,14 +131,34 @@
 							</div>
 						</div>
 						<div class="block_column_30">
-							<ul>
-								<li>
+							<h4 class="border_bottom padding_5 margin_5">המומלצים:</h4>
+							<ul id="obj_gamelist">
+								<li class="border_bottom_dashed">
+									<img src="http://upload.wikimedia.org/wikipedia/en/thumb/6/62/Battlefield2Cover.jpg/256px-Battlefield2Cover.jpg" />
 									<span>
-										<img src="" />
+										<h5>Battlefield 2</h5>
+										<p>חוית משחק מדהימה ומעולה!</p>
 									</span>
+								</li>
+								<li class="border_bottom_dashed">
+									<img src="http://upload.wikimedia.org/wikipedia/en/thumb/6/62/Battlefield2Cover.jpg/256px-Battlefield2Cover.jpg" />
 									<span>
-										<h5></h5>
-										<p></p>
+										<h5>Battlefield 2</h5>
+										<p>חוית משחק מדהימה ומעולה!</p>
+									</span>
+								</li>
+								<li class="border_bottom_dashed">
+									<img src="http://upload.wikimedia.org/wikipedia/en/thumb/6/62/Battlefield2Cover.jpg/256px-Battlefield2Cover.jpg" />
+									<span>
+										<h5>Battlefield 2</h5>
+										<p>חוית משחק מדהימה ומעולה!</p>
+									</span>
+								</li>
+								<li class="border_bottom_dashed">
+									<img src="http://upload.wikimedia.org/wikipedia/en/thumb/6/62/Battlefield2Cover.jpg/256px-Battlefield2Cover.jpg" />
+									<span>
+										<h5>Battlefield 2</h5>
+										<p>חוית משחק מדהימה ומעולה!</p>
 									</span>
 								</li>
 							</ul>
