--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div id="body_content" class="color_blue">
 					<div class="block_raw">
-						<span class="padding_5 color_steel display_block border_bottom"><h5><a href="#">ראשי</a> &#8250; <a href="#">כתבות</a> &#8250; <a href="#">כתבה ראשונה</a></h5></span>
+						<span class="padding_5 color_steel display_block border_bottom"><h5 class="navbar"><a href="#">ראשי</a> &#8250; <a href="#">כתבות</a> &#8250; <a href="#">כתבה ראשונה</a></h5></span>
 					</div>
                     <div class="block_raw">
 						<div class="block_column_70">
