--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 									<span>
 										<h5><a href="#">Battlefield 2</a></h5>
 										<p>חוית משחק מדהימה ומעולה!</p>
+										<h5 class="display_block float_left">10/10</h5>
 									</span>
 								</li>
 								<li class="border_bottom_dashed">
@@ -148,6 +149,7 @@
 									<span>
 										<h5><a href="#">Battlefield 2</a></h5>
 										<p>חוית משחק מדהימה ומעולה!</p>
+										<h5 class="display_block float_left">10/10</h5>
 									</span>
 								</li>
 								<li class="border_bottom_dashed">
@@ -155,6 +157,7 @@
 									<span>
 										<h5><a href="#">Battlefield 2</a></h5>
 										<p>חוית משחק מדהימה ומעולה!</p>
+										<h5 class="display_block float_left">10/10</h5>
 									</span>
 								</li>
 								<li class="border_bottom_dashed">
@@ -162,6 +165,7 @@
 									<span>
 										<h5><a href="#">Battlefield 2</a></h5>
 										<p>חוית משחק מדהימה ומעולה!</p>
+										<h5 class="display_block float_left">10/10</h5>
 									</span>
 								</li>
 								<li class="border_bottom_dashed">
@@ -169,6 +173,7 @@
 									<span>
 										<h5><a href="#">Battlefield 2</a></h5>
 										<p>חוית משחק מדהימה ומעולה!</p>
+										<h5 class="display_block float_left">10/10</h5>
 									</span>
 								</li>
 							</ul>
@@ -318,6 +323,8 @@
                                     </li>
                                 </ul>
                             </div>
+						</div>
+						<div class="block_raw border_bottom">
 						</div>
 					</div>
                 </div>
