--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </script>
     </head>
     
-    <body>
+    <body class="color_bluer">
         <div class="sub_wrapper"></div>
         <div class="main_wrapper">
             <div class="main_container">
