--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     </head>
     
     <body class="color_bluer">
-        <div class="sub_wrapper"></div>
+        <div class="sub_wrapper">
+			
+		</div>
         <div class="main_wrapper">
             <div class="main_container">
                 <div id="body_header">
