--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </script>
     </head>
     
-    <body class="color_bluer">
+    <body class="color_bluer_background">
         <div class="sub_wrapper">
 			
 		</div>
