--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-?
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+  <title>An XHTML 1.0 Strict standard template</title>
+	<meta http-equiv="content-type" 
+		content="text/html;charset=utf-8" />
+</head>
+
+<body>
+
+     <h1>4Gamers</h1>
+     <p>המוח של עמית!</p>
+
+</body>
+</html>
